# bible_pdf

./: .gitignore  Bible Download and PDF Generation.ipynb  README.md  make_bible_pdf.py  mark.csv  pyproject.toml
