[tool.poetry]
name = "bible-pdf"
version = "0.1.0"
description = ""
authors = ["Charles Low <charleslow88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
pylatex = "^1.4.2"
requests = "^2.31.0"
ipython = "^8.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
